# calo

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
lib/: index.ts  scenex.ts
lib/c/: file.ts  index.ts  naming.ts
lib/examples/: gen_sg.ts
src/: calo.h  calo_file.c.h  calo_stream.c.h  calo_stream.h  calo_table.c.h  gen_sg.h  main.c
